--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 # Note: this doesn't include tensorflow or tensorflow-gpu because the package you need to install
 # depends on your platform. It is assumed you have already installed tensorflow.
+llvmlite==0.32.1
+scipy==0.19.0
 falcon==1.2.0
 inflect==0.2.5
-librosa==0.5.1
+numba==0.47
+scikit-learn==0.22.2
+tensorflow-gpu==1.4
 matplotlib==2.0.2
-numpy==1.13.0
-scipy==0.19.0
 tqdm==4.11.2
 Unidecode==0.4.20
+numpy==1.17.0
+librosa==0.6.2
